Add route metadata, generate OpenAPI JSON